--- a/signup.html
+++ b/signup.html
@@ -55,7 +55,7 @@
       </div>
     </header>
 
-    <div class="site-section site-hero inner" style="padding:10px; margin:10px">
+    <div class="site-section site-hero inner" style="padding:10px; margin:10px; min-height: auto;">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-10">
@@ -69,17 +69,22 @@
       <div class="container">
         <div class="row">
           <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+            <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrpYrwbdAEWtOq7f?backgroundColor=red" frameborder="0" onmousewheel="" width="100%" height="1393.005682" style="background: transparent; border: 1px solid #ccc;"></iframe>          
+
+
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
             <div class="p-4 mb-3">
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Address</p>
               <p class="mb-4">1630 Bogie Lake Rd, White Lake, MI 48383</p>
 
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email Address</p>
               <p class="mb-0"><a href="mailto:hackathoniaw@gmail.co">hackathoniaw@gmail.com</a></p>
+              
+              <img style="padding-top: 25px" class="img-fluid" alt="Image" src="images/phoenix2.png">
             </div>
           </div>
-          <div class="col-md-6" data-aos="fade-up">
-            <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrpYrwbdAEWtOq7f?backgroundColor=red" frameborder="0" onmousewheel="" width="100%" height="1393.005682" style="background: transparent; border: 1px solid #ccc;"></iframe>          
-          </div>
+          
         </div>
       </div>
     </div>
