--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
             <p></p>
-            <p>HackIAW is open to people with any level of programming expertise, and is a learning experience more than anything else.</p>
+            <p>HackIAW is one of Michigan's first hackathons, and is completely free to attend. You will even be given a free t-shirt and food!</p>
           </div>
         </div>
         <!-- <div class="row mb-5">
