--- a/index.html
+++ b/index.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>HackIAW</title>
+    <title>HackIAW - SE Michigan Hackathon by IAW</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Website for International Academy West's first hackathon, HackIAW">
     <meta name="keywords" content="Hackathon, HackIAW, HackClub, Michigan, IAW">
     <meta name="author" content="Ethan Deguire">
-
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="css/aos.css">
-
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -377,6 +368,5 @@
   <script src="js/aos.js"></script>
 
   <script src="js/main.js"></script>
-    
   </body>
 </html>
