--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
           <div class="col-12 border-top border-bottom py-5" data-aos="fade" data-aos-delay="150">
             <div class="row align-items-stretch">
-              <div class="col-md-3 text-white mb-3 mb-md-0"><img src="images/EthanDeGuireProfPic.png" alt="Image" class="img-fluid profpic"> </div>
+              <div style="text-align: center;" class="col-md-3 text-white mb-3 mb-md-0"><img src="images/EthanDeGuireProfPic.png" alt="Image" class="img-fluid profpic"> </div>
               <div class="col-md-9">
                 <h1 class="text-white">Ethan DeGuire</h1>
                 <h2 class=>Hackathon Director</h2>
@@ -234,11 +234,11 @@
 
           <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="200">
             <div class="row align-items-stretch">
-              <div  class="col-md-3 text-white mb-3 mb-md-0"><img src="images/grace.png" alt="Image" class="img-fluid profpic"> </div>
+              <div style="text-align: center;" class="col-md-3 text-white mb-3 mb-md-0"><img src="images/grace.png" alt="Image" class="img-fluid profpic"> </div>
               <div class="col-md-9">
                 <h1 class="text-white">Grace Cyporyn</h1>
                 <h2 class=>Vice Hackathon Director</h2>
-                <p class="text-white">Grace is a senior at IAW, and 1/3 of the original Hack IAW leadership trio. She is well into her 4th robotics season on HOT Team 67 as a programmer. Grace loves cats, Stardew Valley, bagels, and trying to convince Brenden that avacado toast is a healthy valid breakfast option.</p>
+                <p class="text-white">Grace is a senior at IAW, and 1/3 of the original Hack IAW leadership trio. She is well into her 4th robotics season on HOT Team 67 as a programmer. Grace loves cats, Stardew Valley, bagels, and trying to convince Brenden that avocado toast is a healthy valid breakfast option.</p>
                 <a target="_blank" href="https://www.instagram.com/gracecyporyn/" class="p-2"><span class="icon-instagram"></span></a>
               </div>
             </div>
@@ -246,11 +246,11 @@
 
           <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="250">
             <div class="row align-items-stretch">
-              <div class="col-md-3 text-white mb-3 mb-md-0"><img src="images/mat.png" alt="Image" class="img-fluid profpic"> </div>
+              <div style="text-align: center;" class="col-md-3 text-white mb-3 mb-md-0"><img src="images/mat.png" alt="Image" class="img-fluid profpic"> </div>
               <div class="col-md-9">
                 <h1 class="text-white">Mateusz Walek</h1>
                 <h2 class=>Vice Hackathon Director</h2>
-                <p class="text-white">Mateusz Walek is a senior at IAW. He is captain of the Science Olympiad club and has a passion for the popular MOBA, League of Legends. He spends his time messing around on CustomInk, playing guitar, and making hundreds of flashcards for his classes. He will spontaneously burst into k-pop dances at any moment, so be wary.</p>
+                <p class="text-white">Mateusz Walek is a senior at IAW. He is captain of Science Olympiad and has a passion for League of Legends. He spends his time messing around on CustomInk, playing guitar, and making hundreds of flashcards. He spontaneously bursts into k-pop dances, so be wary. Ayden is wrong, Mateusz loves him.</p>
                 <a target="_blank" href="https://www.instagram.com/matinzuu/" class="p-2"><span class="icon-instagram"></span></a>
               </div>
             </div>
@@ -258,7 +258,7 @@
 
           <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="300">
             <div class="row align-items-stretch">
-              <div class="col-md-3 text-white mb-3 mb-md-0"><img src="images/ayden.png" alt="Image" class="img-fluid profpic"> </div>
+              <div style="text-align: center;" class="col-md-3 text-white mb-3 mb-md-0"><img src="images/ayden.png" alt="Image" class="img-fluid profpic"> </div>
               <div class="col-md-9">
                 <h1 class="text-white">Ayden Barber</h1>
                 <h2 class=>Head of Marketing</h2>
@@ -270,11 +270,11 @@
 
           <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="250">
             <div class="row align-items-stretch">
-              <div class="col-md-3 text-white mb-3 mb-md-0"><img src="images/bella.png" alt="Image" class="img-fluid profpic"> </div>
+              <div style="text-align: center;" class="col-md-3 text-white mb-3 mb-md-0"><img src="images/bella.png" alt="Image" class="img-fluid profpic"> </div>
               <div class="col-md-9">
                 <h1 class="text-white">Bella Wloch</h1>
                 <h2 class=>Head of Fundraising</h2>
-                <p class="text-white">Bella is an IAW Senior who loves chemistry and is leader of her school’s HOPS medical club. She enjoys straight vibing but is also simultaneously stressed all the time.</p>
+                <p class="text-white">Bella is an IAW Senior who loves chemistry and is leader of HOPS medical club. She enjoys straight vibing but is also simultaneously stressed all the time.</p>
                 <a target="_blank" href="https://www.instagram.com/bella_wloch" class="p-2"><span class="icon-instagram"></span></a>
               </div>
             </div>
@@ -282,7 +282,7 @@
 
           <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="250">
             <div class="row align-items-stretch">
-              <div class="col-md-3 text-white mb-3 mb-md-0"><img src="images/brenden.png" alt="Image" class="img-fluid profpic"> </div>
+              <div style="text-align: center;" class="col-md-3 text-white mb-3 mb-md-0"><img src="images/brenden.png" alt="Image" class="img-fluid profpic"> </div>
               <div class="col-md-9">
                 <h1 class="text-white">Brenden Londeau</h1>
                 <h2 class=>Head of Fundraising</h2>
@@ -294,7 +294,7 @@
           
           <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="250">
             <div class="row align-items-stretch">
-              <div class="col-md-3 text-white mb-3 mb-md-0"><img src="images/gavin.png" alt="Image" class="img-fluid profpic"> </div>
+              <div style="text-align: center;" class="col-md-3 text-white mb-3 mb-md-0"><img src="images/gavin.png" alt="Image" class="img-fluid profpic"> </div>
               <div class="col-md-9">
                 <h1 class="text-white">Gavin DeGuire</h1>
                 <h2 class=>Assistant Organizer</h2>
