update to only collect email

--- a/signup.html
+++ b/signup.html
@@ -65,9 +65,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrpYrwbdAEWtOq7f?backgroundColor=red" frameborder="0" onmousewheel="" width="100%" height="1393.005682" style="background: transparent; border: 1px solid #ccc;"></iframe>          
-
-
+              <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
+              <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrpYrwbdAEWtOq7f?backgroundColor=red" frameborder="0" onmousewheel="" width="100%" height="1393.005682" style="background: transparent; border: 1px solid #ccc;"></iframe>          
             </div>
             <div class="col-md-6" data-aos="fade-up">
               <div class="p-4 mb-3">
