added HEPS, reworked sponsorships

--- a/index.html
+++ b/index.html
@@ -464,32 +464,42 @@
             <p>HackIAW would not have been possible without our fantastic sponsors and supporters.</p>
           </div>
         </div>
-        <div class="row mb-5">
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-            <img src="images/github.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
-            <img src="images/hackclublogo.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="400">
-            <img src="images/stickermule.png" alt="Image" class="img-fluid">
-          </div>
 
-          <!-- <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="500">
-            <img src="images/logo_4.png" alt="Image" class="img-fluid">
+        <div class="sponsorsection" data-aos="fade" data-aos-delay="200">
+          <h3>Out of This World 🌌</h3><hr>
+          <div class="bigsponsor">
+            <a target="none" href="http://www.higheff.com/">
+              <img src="images/HEPSlogo.png" alt="Image" class="img-fluid">
+            </a>
           </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="600">
-            <img src="images/logo_5.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="700">
-            <img src="images/logo_6.png" alt="Image" class="img-fluid">
-          </div> -->
-
         </div>
+
+        <div class="sponsorsection" data-aos="fade" data-aos-delay="200">
+          <h3>Blasting Off 🚀</h3><hr>
+          <div class="sponsorrow">
+            <a target="none" href="https://github.com/">
+              <img src="images/github.png" alt="Image" class="mediumsponsor">
+            </a>    
+          </div>
+        </div>
+
+        <div class="sponsorsection" data-aos="fade" data-aos-delay="200">
+          <h3>Ground Control 👨‍💼🎧</h3><hr>
+          <div class="sponsorrow">
+            <a target="none" href="https://hackclub.com/">
+              <img src="images/hackclublogo.png" alt="Image" class="sponsor">
+            </a>
+            <a target="none" href="https://www.stickermule.com/">
+              <img src="images/stickermule.png" alt="Image" class="sponsor">
+            </a>
+          </div>
+        </div>
+  
+        
 
         <div class="row" data-aos="fade-up" data-aos-delay="500">
           <div class="col-12 text-center pt-5">
-            <a href="mailto:hackathoniaw@gmail.com" class="btn-custom" data-aos="fade-up" data-aos-delay="800"><span>Sponsorship inquiries</span></a>
+            <a href="https://drive.google.com/file/d/1e9SPrmSAUz-tl4v6PFvR6NAPPs1H19a5/view?usp=sharing" class="btn-custom" data-aos="fade-up" data-aos-delay="800"><span>Sponsorship inquiries</span></a>
           </div>
         </div>
       </div>
