--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             </span>
 
             <script>
-              var countDownDate = new Date("Feb 1, 2020").getTime();
+              var countDownDate = getNextDayOfWeek(new Date(), 5).getTime();
+
               var x = setInterval(function() {
                 var now = new Date().getTime();
                 var distance = countDownDate - now;
@@ -111,8 +112,14 @@
                 var seconds = Math.floor((distance % (1000 * 60)) / 1000);
                 document.getElementById("countdowntimer").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
               }, 1000);
-            </script>
 
+              function getNextDayOfWeek(date, dayOfWeek) {
+                var resultDate = new Date(date.getTime());
+                resultDate.setDate(date.getDate() + (7 + dayOfWeek - date.getDay()) % 7);
+                resultDate.setHours(0,0,0,0);
+                return resultDate;
+              }
+            </script>
           </div>
         </div>
       </div>
