--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </span>
 
             <script>
-              var countDownDate = getNextDayOfWeek(new Date(), 5).getTime();
+              var countDownDate = new Date("Feb 29, 2020")
 
               var x = setInterval(function() {
                 var now = new Date().getTime();
@@ -112,13 +112,6 @@
                 var seconds = Math.floor((distance % (1000 * 60)) / 1000);
                 document.getElementById("countdowntimer").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
               }, 1000);
-
-              function getNextDayOfWeek(date, dayOfWeek) {
-                var resultDate = new Date(date.getTime());
-                resultDate.setDate(date.getDate() + (7 + dayOfWeek - date.getDay()) % 7);
-                resultDate.setHours(0,0,0,0);
-                return resultDate;
-              }
             </script>
           </div>
         </div>
