--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
           <div class="col-md-10">
             <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">White Lake, Michigan</span>
             <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="125">HackIAW</h1>
-            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="150">March 28th, 2020</span>
+            <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="150">RE-SCHEDULING DUE TO COVID-19</span>
             <span id="signincontainer" class="container-fluid whiteroundbox d-block mb-5 caption" data-aos="fade-up" data-aos-delay="150">
               Email Address:
               <input id="emailinput" autofocus="autofocus" class="inputbox" type="email">
-              <button style="margin:0px; padding:10px !important;" class="btn-custom" onclick="SendSignIn()"> Submit </button>
+              <button style="margin:0px; padding:10px !important;" class="btn-custom" onclick="SendSignIn()"> Sign Up </button>
               <br>
-              Sign up within <div style="display: inline; color:red" id="countdowntimer">x days</div> for a <i style="color:red">FREE</i> t-shirt!
+              <!-- Sign up within <div style="display: inline; color:red" id="countdowntimer">x days</div> for a <i style="color:red">FREE</i> t-shirt! -->
               <script>
                 var Airtable = require('airtable');
                 var base = new Airtable({apiKey: 'keyehAghfQf8EaCdZ'}).base('appP9Mj3OKN5v2OjA');    
@@ -100,7 +100,7 @@
               <h3>Thank you for signing up, you should get a confirmation email shortly.</h3>
             </span>
 
-            <script>
+            <!-- <script>
               var countDownDate = new Date();
               countDownDate.setHours(23,59,59,999);
               var ms = countDownDate.getTime() + (86400000 * 3);
@@ -110,12 +110,13 @@
                 var now = new Date().getTime();
                 var distance = countDownDate - now;
                 var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                var hours = Math.f loor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
                 var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
                 var seconds = Math.floor((distance % (1000 * 60)) / 1000);
                 document.getElementById("countdowntimer").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
               }, 1000);
-            </script>
+            </script> -->
+            
           </div>
         </div>
       </div>
@@ -177,7 +178,7 @@
             <img src="images\Logo-PhoenixHACKIAW.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-6 ml-auto">
-            <h2 style="background-color: #232531" class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">March 28th, 2020<br> 9AM to 7PM</h2>
+            <h2 style="background-color: #232531" class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">DATE NOT DECIDED<br> 9AM to 7PM</h2>
             <div class="bio pl-lg-5">
               <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Lakeland High School</span>
                     <p class="mb-4" data-aos="fade-right" data-aos-delay="400">1630 Bogie Lake Rd, White Lake, MI 48383</p>
